--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Artist</title>
+    <title>Drake Wiki</title>
+    <link rel="shortcut icon" type="image/jpg" href="./image/favicon-16x16.png"/>
   </head>
   <body>
     <div id="root"></div>
