--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" type="image/jpg" href="./image/favicon.ico"/>
+    <link rel="shortcut icon" href="./image/favicon.ico"/>
     <title>Drake Wiki</title>
   </head>
   <body>
